auth page bootstraped

--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -1,1 +1,45 @@
-<h1><%= title %></h1>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>Validage Configuration</title>
+    <!-- <link rel='stylesheet' href='/stylesheets/style.css' /> -->
+</head>
+
+<body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <div class="container">
+        <div class="media">
+            <div class="media-body d-flex p-2">
+                        <h1 class="mt-0 mb-1 display-4" style="color: rgb(22, 161, 22); display: inline;"><%= title[0] %> </h1>      
+                        <h1 class="mt-0 mb-1 display-4" style="color: rgb(23, 115, 23); display: inline;"><%= title[1] %> </h1>
+            </div>
+            <img class="ml-3" src="/images/logo.gif" alt="Validage Logo" width="250px" height="250px">
+        </div>
+                <div class="container">
+                  <h1 class="display-4">Congratulation !</h1>
+                  <p class="lead">ValidAge app installed successfully. Please lunch the app and follow BigCommerce instruction from your <a href="www.validage.com">ValidAge</a> website.</p>
+                </div>      
+    </div>
+
+</body>
+
+</html>
