Add scripts in head by API

--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -36,7 +36,7 @@
         </div>
                 <div class="container">
                   <h1 class="display-4">Congratulation !</h1>
-                  <p class="lead">ValidAge app installed successfully. Please lunch the app and follow BigCommerce instruction from your <a href="www.validage.com">ValidAge</a> website.</p>
+                  <p class="lead">ValidAge app installed successfully. Please lunch the app and follow BigCommerce instruction from your <a href="https://www.validage.com">ValidAge</a> website.</p>
                 </div>      
     </div>
 
